Added comments and ADX feature which is a metric of trend strength

--- a/strat dev 8 - feature (static) predictive long-short.ipynb
+++ b/strat dev 8 - feature (static) predictive long-short.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "123ba6f6",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "from ta.momentum import RSIIndicator, StochasticOscillator\n",
     "from ta.volatility import BollingerBands, AverageTrueRange\n",
     "from ta.trend import MACD\n",
+    "from ta.trend import adx\n",
     "from ta.volume import OnBalanceVolumeIndicator"
    ]
   },
@@ -98,7 +99,7 @@
     "            forex_data[pair] = data\n",
     "    return forex_data\n",
     "\n",
-    "# Fetch\n",
+    "# Fetch - returns dict of dataframes\n",
     "forex_data = fetch_data(formatted_pairs, start_date, end_date)"
    ]
   },
@@ -258,7 +259,7 @@
     "    # Ensure df sorted by date\n",
     "    df.sort_index(inplace=True)\n",
     "    \n",
-    "    # Shift 1 to exclude current date price\n",
+    "    # Shift 1 to exclude current date price aka close is now yesterday's close\n",
     "    df['Close_Shifted'] = df['Close'].shift(1)\n",
     "    df['High_Shifted'] = df['High'].shift(1)\n",
     "    df['Low_Shifted'] = df['Low'].shift(1)\n",
@@ -267,13 +268,14 @@
     "    # --- Feature Calculations using shifted data ---\n",
     "    \n",
     "    # Return over the past momentum days (exclu current date)\n",
+    "    # Simple % change for past 10 days\n",
     "    df['Momentum'] = df['Close_Shifted'].pct_change(periods=lookback_periods['momentum'])\n",
     "    \n",
-    "    # Rolling std of daily returns (exclu current date)\n",
+    "    # Rolling std of daily returns (exclu current date) of past 14 days\n",
     "    df['Returns'] = df['Close_Shifted'].pct_change()\n",
     "    df['Volatility'] = df['Returns'].rolling(window=lookback_periods['volatility']).std()\n",
     "    \n",
-    "    # RSI 14 days\n",
+    "    # RSI 14 days - use function from ta\n",
     "    rsi_indicator = RSIIndicator(close=df['Close_Shifted'], window=14)\n",
     "    df['RSI'] = rsi_indicator.rsi()\n",
     "    \n",
@@ -291,11 +293,12 @@
     "        df['Stoch_D'] = np.nan\n",
     "    \n",
     "    # BB 20 days\n",
+    "    # Calculating by adding or subtracting a std dev drom 20-day MA\n",
     "    bollinger = BollingerBands(close=df['Close_Shifted'], window=20)\n",
     "    df['BB_High'] = bollinger.bollinger_hband()\n",
     "    df['BB_Low'] = bollinger.bollinger_lband()\n",
     "    \n",
-    "    # ATR 14 days\n",
+    "    # ATR 14 days - measure of market volatility\n",
     "    if 'High_Shifted' in df.columns and 'Low_Shifted' in df.columns:\n",
     "        atr_indicator = AverageTrueRange(\n",
     "            high=df['High_Shifted'], \n",
@@ -307,14 +310,20 @@
     "        df['ATR'] = np.nan\n",
     "    \n",
     "    # MACD - diff bw 12-period EMA and 26-period EMA of shifted prices\n",
+    "    # Difference between MACD and Signal line \"MACD_Diff\" used to generate signals\n",
     "    macd_indicator = MACD(close=df['Close_Shifted'])\n",
     "    df['MACD'] = macd_indicator.macd()\n",
     "    df['MACD_Signal'] = macd_indicator.macd_signal() # 9-period EMA of MACD\n",
     "    df['MACD_Diff'] = macd_indicator.macd_diff()\n",
+    "\n",
+    "    # ADX - measures trend strength\n",
+    "    # 14 period window suggested by Wilder(1978) but given strategy is to hold for 5 days, using a 5 or 7 day window may be more appropriate\n",
+    "    adx_indicator = adx(high=df['High_Shifted'], low=df['Low_Shifted'], close=df['Close_Shifted'], window=14)\n",
+    "    df['ADX'] = adx_indicator.adx()\n",
     "    \n",
     "    # --- Prep df ---\n",
     "    \n",
-    "    # Features\n",
+    "    # Features - returned df only includes the technical features\n",
     "    feature_columns = ['Momentum', 'Volatility', 'RSI', 'Stoch_K', 'Stoch_D',\n",
     "                       'BB_High', 'BB_Low', 'ATR', 'MACD', 'MACD_Signal', 'MACD_Diff']\n",
     "    df_features = df[feature_columns].copy()\n",
@@ -324,14 +333,17 @@
     "    return df_features\n",
     "\n",
     "# Features for all pairs\n",
+    "# forex_data: dict of dataframes\n",
     "feature_dfs = []\n",
     "for pair, data in forex_data.items():\n",
     "    if not data.empty and 'Close' in data.columns:\n",
     "        df_features = compute_features_for_pair(data, pair)\n",
     "        feature_dfs.append(df_features)\n",
     "\n",
-    "# Concat\n",
+    "# Concat \n",
     "features_all_pairs = pd.concat(feature_dfs)\n",
+    "\n",
+    "# Reset index so treated as column\n",
     "features_all_pairs.reset_index(inplace=True)\n",
     "features_all_pairs.rename(columns={'index': 'Date'}, inplace=True)"
    ]
@@ -358,20 +370,21 @@
     "        prices[pair] = data['Close']\n",
     "prices.dropna(inplace=True)\n",
     "\n",
-    "# Shift 1 to exclude current date price\n",
+    "# Shift 1 to exclude current date price as used the original forex_data\n",
     "prices_shifted = prices.shift(1)\n",
     "returns = prices_shifted.pct_change()\n",
     "\n",
     "# Rolling average correlation for each pair\n",
+    "# Window is defined in first cell (currently 30 days)\n",
     "def compute_rolling_correlations(returns, window):\n",
     "    avg_corr = returns.rolling(window).corr()\n",
     "    avg_corr_df = pd.DataFrame(index=returns.index, columns=returns.columns)\n",
     "    \n",
-    "    # Avg corr for each currency pair\n",
+    "    # Avg corr for each currency pair at a given date\n",
     "    for date in returns.index[window - 1:]:\n",
-    "        corr_matrix = avg_corr.loc[date]\n",
+    "        corr_matrix = avg_corr.loc[date] # Corr matrix for that date\n",
     "        for pair in returns.columns:\n",
-    "            # Exclude self-corr\n",
+    "            # Exclude self-corr, calculate avg correlations with other pairs for the past \n",
     "            correlations = corr_matrix[pair].drop(pair, errors='ignore')\n",
     "            avg_corr_df.at[date, pair] = correlations.mean()\n",
     "    \n",
@@ -528,7 +541,18 @@
    "execution_count": 7,
    "id": "56848ec6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\charl\\AppData\\Local\\Temp\\ipykernel_34288\\1696794940.py:9: FutureWarning: The default fill_method='pad' in DataFrame.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
+      "  future_returns = prices.shift(-holding_period + 1).pct_change(periods=holding_period)\n",
+      "C:\\Users\\charl\\AppData\\Local\\Temp\\ipykernel_34288\\1696794940.py:46: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  labeled_df = df.groupby('Date').apply(assign_labels)\n"
+     ]
+    }
+   ],
    "source": [
     "# Def holding period - number of days to hold each position\n",
     "holding_period = 5  # e.g., 5 days\n",
@@ -538,12 +562,15 @@
     "    \"\"\"\n",
     "    Include the current date in the holding period\n",
     "    \"\"\"\n",
+    "    # Negative shifts bring future returns to the current date, +1 to account for wanting todays close as part of future calculation so no data leakage\n",
+    "    # pct_change looks back by the value specified by periods = . So here it is looking back 5 days where the current day has been shifted back to fro, the shift\n",
     "    future_returns = prices.shift(-holding_period + 1).pct_change(periods=holding_period)\n",
     "    return future_returns\n",
     "\n",
     "# Future returns (inclu current date)\n",
+    "# prices is close from forex_data\n",
     "future_returns = compute_future_returns(prices, holding_period)\n",
-    "future_returns_long = future_returns.stack().reset_index()\n",
+    "future_returns_long = future_returns.stack().reset_index() # Convert to long format\n",
     "future_returns_long.columns = ['Date', 'CurrencyPair', 'FutureReturn']\n",
     "\n",
     "# Merge\n",
@@ -573,7 +600,7 @@
     "        group['Label'] = np.select(conditions, choices, default=0)  # Neutral for others\n",
     "        return group\n",
     "    \n",
-    "    # Label assignment to each group\n",
+    "    # Label assignment to each group, group by date so that the quantiles are computed for each date\n",
     "    labeled_df = df.groupby('Date').apply(assign_labels)\n",
     "    return labeled_df\n",
     "\n",
@@ -893,11 +920,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "058607ab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Momentum</th>\n",
+       "      <th>Volatility</th>\n",
+       "      <th>RSI</th>\n",
+       "      <th>Stoch_K</th>\n",
+       "      <th>Stoch_D</th>\n",
+       "      <th>BB_High</th>\n",
+       "      <th>BB_Low</th>\n",
+       "      <th>ATR</th>\n",
+       "      <th>MACD</th>\n",
+       "      <th>MACD_Signal</th>\n",
+       "      <th>MACD_Diff</th>\n",
+       "      <th>CurrencyPair</th>\n",
+       "      <th>AvgCorrelation</th>\n",
+       "      <th>FutureReturn</th>\n",
+       "      <th>Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-02-18 00:00:00+00:00</td>\n",
+       "      <td>-0.021159</td>\n",
+       "      <td>0.006979</td>\n",
+       "      <td>33.281113</td>\n",
+       "      <td>15.039357</td>\n",
+       "      <td>24.244319</td>\n",
+       "      <td>1.421431</td>\n",
+       "      <td>1.349064</td>\n",
+       "      <td>0.013711</td>\n",
+       "      <td>-0.016374</td>\n",
+       "      <td>-0.016506</td>\n",
+       "      <td>0.000132</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "      <td>0.096412</td>\n",
+       "      <td>-0.004686</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-02-18 00:00:00+00:00</td>\n",
+       "      <td>0.002312</td>\n",
+       "      <td>0.005963</td>\n",
+       "      <td>55.496274</td>\n",
+       "      <td>88.063125</td>\n",
+       "      <td>67.793392</td>\n",
+       "      <td>91.033683</td>\n",
+       "      <td>89.058916</td>\n",
+       "      <td>0.921151</td>\n",
+       "      <td>-0.312531</td>\n",
+       "      <td>-0.499791</td>\n",
+       "      <td>0.187260</td>\n",
+       "      <td>USDJPY=X</td>\n",
+       "      <td>0.072729</td>\n",
+       "      <td>-0.008468</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-02-18 00:00:00+00:00</td>\n",
+       "      <td>-0.014945</td>\n",
+       "      <td>0.005976</td>\n",
+       "      <td>38.952843</td>\n",
+       "      <td>22.484508</td>\n",
+       "      <td>24.714181</td>\n",
+       "      <td>1.632753</td>\n",
+       "      <td>1.544570</td>\n",
+       "      <td>0.015316</td>\n",
+       "      <td>-0.012290</td>\n",
+       "      <td>-0.012133</td>\n",
+       "      <td>-0.000157</td>\n",
+       "      <td>GBPUSD=X</td>\n",
+       "      <td>0.161232</td>\n",
+       "      <td>-0.016897</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010-02-18 00:00:00+00:00</td>\n",
+       "      <td>0.018410</td>\n",
+       "      <td>0.005997</td>\n",
+       "      <td>66.548409</td>\n",
+       "      <td>85.406906</td>\n",
+       "      <td>74.118437</td>\n",
+       "      <td>1.084414</td>\n",
+       "      <td>1.036504</td>\n",
+       "      <td>0.010643</td>\n",
+       "      <td>0.010017</td>\n",
+       "      <td>0.009841</td>\n",
+       "      <td>0.000176</td>\n",
+       "      <td>USDCHF=X</td>\n",
+       "      <td>-0.388175</td>\n",
+       "      <td>0.002988</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-02-18 00:00:00+00:00</td>\n",
+       "      <td>0.018693</td>\n",
+       "      <td>0.009571</td>\n",
+       "      <td>53.836993</td>\n",
+       "      <td>88.584587</td>\n",
+       "      <td>82.532503</td>\n",
+       "      <td>0.912704</td>\n",
+       "      <td>0.864378</td>\n",
+       "      <td>0.011601</td>\n",
+       "      <td>-0.003575</td>\n",
+       "      <td>-0.006899</td>\n",
+       "      <td>0.003324</td>\n",
+       "      <td>AUDUSD=X</td>\n",
+       "      <td>0.17486</td>\n",
+       "      <td>-0.004830</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Date  Momentum  Volatility        RSI    Stoch_K  \\\n",
+       "0 2010-02-18 00:00:00+00:00 -0.021159    0.006979  33.281113  15.039357   \n",
+       "1 2010-02-18 00:00:00+00:00  0.002312    0.005963  55.496274  88.063125   \n",
+       "2 2010-02-18 00:00:00+00:00 -0.014945    0.005976  38.952843  22.484508   \n",
+       "3 2010-02-18 00:00:00+00:00  0.018410    0.005997  66.548409  85.406906   \n",
+       "4 2010-02-18 00:00:00+00:00  0.018693    0.009571  53.836993  88.584587   \n",
+       "\n",
+       "     Stoch_D    BB_High     BB_Low       ATR      MACD  MACD_Signal  \\\n",
+       "0  24.244319   1.421431   1.349064  0.013711 -0.016374    -0.016506   \n",
+       "1  67.793392  91.033683  89.058916  0.921151 -0.312531    -0.499791   \n",
+       "2  24.714181   1.632753   1.544570  0.015316 -0.012290    -0.012133   \n",
+       "3  74.118437   1.084414   1.036504  0.010643  0.010017     0.009841   \n",
+       "4  82.532503   0.912704   0.864378  0.011601 -0.003575    -0.006899   \n",
+       "\n",
+       "   MACD_Diff CurrencyPair AvgCorrelation  FutureReturn  Label  \n",
+       "0   0.000132     EURUSD=X       0.096412     -0.004686      0  \n",
+       "1   0.187260     USDJPY=X       0.072729     -0.008468      0  \n",
+       "2  -0.000157     GBPUSD=X       0.161232     -0.016897     -1  \n",
+       "3   0.000176     USDCHF=X      -0.388175      0.002988      1  \n",
+       "4   0.003324     AUDUSD=X        0.17486     -0.004830      0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_all_pairs.head(5)"
+   ]
   },
   {
    "cell_type": "code",
